styles.css
/*noinspection CssUnknownTarget*/
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');

li, a, button, p {
    font-family: "Montserrat", sans-serif;
    font-weight: 500;
    font-size: 16px;
    color: #edf0f1;
    text-decoration: none;
    align-content: center;
    align-items: center;
}

header {
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 30px 10%;
    background-color: rgba(0, 0, 0, 0.6);
    border-radius: 50px;
}

.nav_links {
    list-style: none;
    align-items: center;
    align-content: center;
}

.nav_links li {
    display: inline-block;
    padding: 0 20px;
    align-content: center;
}

.nav_links li a {
    transition: all 0.3s ease 0s;
    align-content: center;
}

.nav_links li a:hover {
    color: #ff99ff;
    align-content: center;
}

button {
    padding: 9px 25px;
    background-color: rgba(0, 136, 169, 1);
    border: none;
    border-radius: 50px;
    cursor: pointer;
    transition: all 0.3s ease 0s;
}

button:hover {
    background-color: rgba(0, 136, 169, 0.8);
}

.Index {
    text-align: center;
    background-color: rgba(0, 0, 0, 0.6);
    height: 200px;
    padding-top: 25px;
    margin-top: 25px;
    border-radius: 50px;
}

body {
    background: url("images/HadesScreenshot.png") no-repeat center;
    background-size: cover;
    height: 100vh;
    overflow-y: hidden;
    overflow-x: hidden;
}

h1 {
    font-family: "Monsterrat", sans-serif;
    color: #edf0f1;
}

a:hover {
    color: #ff99ff;
}

.Projects {
    text-align: center;
    background-color: rgba(0, 0, 0, 0.6);
    height:200px;
    padding-top:25px;
    margin-top:25px;
    border-radius: 50px;
}

.About {
    text-align: center;
    background-color: rgba(0, 0, 0, 0.6);
    height:200px;
    padding-top:25px;
    margin-top:25px;
    border-radius: 50px;
}

.Socials {
    text-align: center;
    background-color: rgba(0, 0, 0, 0.6);
    height:200px;
    padding-top:25px;
    margin-top:25px;
    border-radius: 50px;
}

img {
    border-radius: 50%;
    height: 100px;
    width: 100px;
    padding-left: 10px;
    padding-right: 10px
}

.Github {
    align-content: center;
}

.DieHornet {
    padding-left: 5px;
}

